--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/eslint": "19.8.2",
-    "@nx/eslint-plugin": "19.8.2",
-    "@nx/js": "19.8.2",
-    "@nx/nest": "^19.8.2",
-    "@nx/node": "19.8.2",
-    "@nx/web": "19.8.2",
-    "@nx/webpack": "19.8.2",
-    "@nx/workspace": "19.8.2",
+    "@nx/eslint": "20.1.3",
+    "@nx/eslint-plugin": "20.1.3",
+    "@nx/js": "20.1.3",
+    "@nx/nest": "20.1.3",
+    "@nx/node": "20.1.3",
+    "@nx/web": "20.1.3",
+    "@nx/webpack": "20.1.3",
+    "@nx/workspace": "20.1.3",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/async-retry": "^1.4.9",
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
-    "nx": "19.8.2",
+    "nx": "20.1.3",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
@@ -31,11 +32,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.2",
     "@nestjs/microservices": "^10.4.4",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-socket.io": "^10.4.11",
+    "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/websockets": "^10.4.4",
+    "async-retry": "^1.3.3",
     "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
